--- a/charts/helm-example/templates/service.yaml
+++ b/charts/helm-example/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "helm-example.fullname" . }}
+  namespace: demo
   labels:
     {{- include "helm-example.labels" . | nindent 4 }}
 spec:
