--- a/charts/helm-example/templates/deployment.yaml
+++ b/charts/helm-example/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "helm-example.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "helm-example.labels" . | nindent 4 }}
 spec:
