--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,9 @@ jobs:
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash
 #        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash"
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash" >>$GITHUB_OUTPUT
 
+    - name: Set output
+      run: echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash" >>$GITHUB_OUTPUT
     - name: Update Version
       run: |
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
