--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - 'README.md'
       - 'backup/**'
       - '**/*.draft.md'
-      - 'charts/**'
+#      - 'charts/**'
 jobs:
   build:
     name: Build and Pushing the Image
